# rapido

./: .gitignore  Cargo.toml  LICENSE  component.json  content.json  content2.json  db.sqlite
examples/cmd/: Cargo.toml
examples/cmd/src/: main.rs
rapi-core/: Cargo.toml
rapi-core/src/component/: mod.rs
rapi-web/: Cargo.toml
rapi-web/examples/: playground.rs
rapi-web/src/: app.rs
rapi-web/src/controllers/: component.rs
rapi-web/src/mailers/: auth.rs
rapi-web/src/models/_entities/: component.rs  mod.rs
rapi-web/tests/models/: users.rs
rapi-web/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
rapi-web/tests/tasks/: seed.rs
rapido-api/: Cargo.toml
rapido-api/config/: test.yaml
rapido-api/examples/: playground.rs
rapido-api/migration/src/: m20231103_114511_component.rs
rapido-api/src/: app.rs
rapido-api/src/controllers/: component.rs  dynamo.rs  mod.rs
rapido-api/src/mailers/: auth.rs
rapido-api/src/models/: component.rs
rapido-api/src/models/_entities/: component.rs
rapido-api/tests/models/: users.rs
rapido-api/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
rapido-api/tests/tasks/: seed.rs
rapido-core/: Cargo.toml
rapido-core/src/: bin.rs  command_executor.rs  database.rs  error.rs  lib.rs  sql_executor.rs  sql_generator.rs
rapido-core/src/app/: context.rs
rapido-core/src/component/: attribute.rs  field.rs  mod.rs
rapido-core/src/component/attribute/: integer.rs  string.rs
rapido-web/: Cargo.toml
rapido-web/config/: development.yaml
rapido-web/examples/: playground.rs
rapido-web/migration/src/: lib.rs
rapido-web/src/controllers/: mod.rs
rapido-web/src/mailers/: auth.rs
rapido-web/src/models/: mod.rs
rapido-web/src/models/_entities/: component.rs
rapido-web/tests/models/: users.rs
rapido-web/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
rapido-web/tests/tasks/: seed.rs
src/: component.rs  lib.rs  main.rs  schema.rs
src/component/: attribute.rs  mod.rs
src/component/attribute/: integer.rs  string.rs
