[workspace]

resolver = "2"

members = [ "rapi-core", "rapi-web"]
default-members = [ "rapi-core", "rapi-web"]

[workspace.dependencies]
anyhow      = { version = "1.0.89" }

serde_json = { version = "1.0.128", features = ["indexmap"] }

serde = { version = "1.0.210", features = ["derive", "rc"] }
sqlx = { version = "0.7", features = ["runtime-async-std", "sqlite"] }
