[workspace]
resolver = "2"
members = [ ".", "rapido-core", "rapido-api"]
default-members = [ ".", "rapido-core", "rapido-api"]

[package]
name = "rapido"
version = "0.0.1"
description = "api prototyping"
authors = ["c0d3x42@gmail.com"]
edition = "2021"
license = "MIT"
repository = "https://github.com/c0d3x42/rapido"
publish = true


[lib]
name = "rapido"


[dependencies]
rapido-core = { version = "0" }

[workspace.dependencies]
anyhow      = { version = "1.0.89" }
serde_json = { version = "1.0.128", features = ["indexmap"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
sqlx = { version = "0.7", features = ["runtime-async-std", "sqlite"] }
