[package]
name = "rapido-core"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "core libs"
publish = true
repository = "https://github.com/c0d3x42/rapido"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
sea-query = "0.31.0"
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = { workspace = true }
